@@ -78,6 +78,8 @@ class LiveViewer(QtGui.QDialog):
                  "datasource": "HiDRASource",
                  "slot": "updateHidraButton",
                  "hidden": ["attrLabel", "attrLineEdit",
+                            "fileLabel", "fileLineEdit",
+                            "dirLabel", "dirLineEdit",
                             "httpLabel", "httpLineEdit",
                             "pickleTopicLabel", "pickleTopicComboBox",
                             "pickleLabel", "pickleLineEdit"]}
@@ -88,6 +90,8 @@ class LiveViewer(QtGui.QDialog):
                  "datasource": "TangoAttrSource",
                  "slot": "updateAttrButton",
                  "hidden": ["hostlabel", "currenthost",
+                            "fileLabel", "fileLineEdit",
+                            "dirLabel", "dirLineEdit",
                             "pickleLabel", "pickleLineEdit",
                             "httpLabel", "httpLineEdit",
                             "pickleTopicLabel", "pickleTopicComboBox",
@@ -110,6 +114,8 @@ class LiveViewer(QtGui.QDialog):
              "datasource": "ZMQPickleSource",
              "slot": "updateZMQPickleButton",
              "hidden": ["hostlabel", "currenthost",
+                        "fileLabel", "fileLineEdit",
+                        "dirLabel", "dirLineEdit",
                         "serverLabel", "serverlistBox",
                         "httpLabel", "httpLineEdit",
                         "attrLabel", "attrLineEdit"]},
@@ -120,6 +126,8 @@ class LiveViewer(QtGui.QDialog):
              "slot": "updateHTTPButton",
              "hidden": ["hostlabel", "currenthost",
                         "serverLabel", "serverlistBox",
+                        "fileLabel", "fileLineEdit",
+                        "dirLabel", "dirLineEdit",
                         "pickleLabel", "pickleLineEdit",
                         "pickleTopicLabel", "pickleTopicComboBox",
                         "attrLabel", "attrLineEdit"]},
@@ -130,6 +138,8 @@ class LiveViewer(QtGui.QDialog):
              "slot": "updateButton",
              "hidden": ["hostlabel", "currenthost",
                         "httpLabel", "httpLineEdit",
+                        "fileLabel", "fileLineEdit",
+                        "dirLabel", "dirLineEdit",
                         "serverLabel", "serverlistBox",
                         "pickleLabel", "pickleLineEdit",
                         "pickleTopicLabel", "pickleTopicComboBox",
