@@ -1,5 +1,6 @@
 2018-01-XX Jan Kotanski <jan.kotanski@desy.de>
 	* add HTTP response source for eiger
+	* add Tango File source for pilatus
 	* tagged as 0.9.0
 
 2018-01-10 Jan Kotanski <jan.kotanski@desy.de>
